# data-assignments

./: CMakeLists.txt  README.md
apps/: analyzeDNA1.cpp  analyzeDNA2.cpp  analyzeECG.cpp  area.cpp  basic.cpp  calculator.cpp  complementaryDNA.cpp  countDNA.cpp  count_words.cpp  euclidean.cpp  hash.cpp  heron.cpp  insertion.cpp  main2.cpp  merge.cpp  quick.cpp  testPoint.cpp  test_heap.cpp  test_tree.cpp  translateDNA.cpp  unique_words.cpp
include/: adt.hpp  arrays.hpp  bst.hpp  codon_table.hpp  custom_types.hpp  dna1.hpp  dna2.hpp  dna3.hpp  ecg.hpp  hash_chaining.hpp  heap.hpp  helpers1.hpp  helpers2.hpp  helpers3.hpp  insertion.hpp  map.hpp  mathematics.hpp  merge.hpp  quick.hpp  rna.hpp  set.hpp  shapes.hpp
